# Goldilocks

./: Cargo.toml  README.md
benches/: bench.rs
src/: derive.rs  extfield.rs  field.rs  fp.rs  fp2.rs  fp3.rs  lib.rs  primefield.rs  smallfield.rs  structs.rs  tests.rs  util.rs
src/extfield/: fp.rs  fp2.rs  fp3.rs
src/primefield/: fp.rs  fp2.rs  fp3.rs
src/smallfield/: fp.rs
src/tests/: fp.rs  fp2.rs  fp3.rs
src/util/: avx2.rs  mle_helper.rs
