[package]
name = "goldilocks"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13.0"
rand_core = "0.6.4"
subtle = "2.5"
serde = "1.0"


[dev-dependencies]
rand_xorshift = "0.3"
ark-std = { version = "0.4", features = ["print-trace"] }
halo2curves = "0.1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false